FIxed responsiveness and alignment using Bootstrap

--- a/resources/styles/player.css
+++ b/resources/styles/player.css
@@ -9,31 +9,44 @@ body{
   width: 100vw;
   height:100vh;
   text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 .divPlayerDetail{
   width: 100%;
   height:8%;
   text-align: center;
-  margin-bottom: 1%;
+  margin: 0% 0% 1% 0%;
 }
 .divWelcomePlayer{
   visibility: hidden;
   position: absolute;
   font-size:1.4em;
-  text-align:center;
-  margin-top: 1%;
+  /* text-align:center; */
+  /* margin-top: 1%; */
   width: 100%;
+  margin-left: 0px;
 }
 .txtPlayerName{
   width: 30%;
-  height: 70%;
+  /* height: 70%; */
   padding: 1% 1% 1% 1%;
   text-align:center;
   font-family: sans-serif;
   font-size:1.4em;
   box-sizing: border-box;
   border-radius: 6px;
-  margin-top: 1%;
+  /* margin-top: 1%; */
+}
+.btnAddMe{
+    background:#2ecc71;
+    /* height: 80%; */
+    padding: 1% 2% 1% 2%;
+    font-size: 1.3em;
+    color:white;
+    border-radius:6px;
+    margin-left: 2%;
+    /* width: 7em; */
 }
 .btn{
     background:#2ecc71;
@@ -54,11 +67,116 @@ body{
   left:25vw;
   top:15vh;
 }
-.divPlayerArea{
-  width:70%;
-  height:90%;
+
+.divChatContainer{
+  background: #8499db;
+  /* width:30%;
+  height:90%; */
   border-radius:6px;
-  float:right;
+  /* float:left; */
+  text-align:center;
+  padding: 0.5% 1% 1% 1%;
+}
+.chatHeadings{
+  font-size: 1.4em;
+  height: 5%;
+  border-radius:5px;
+}
+.reverseDiv
+{
+  /* width:10%;
+  height:10%;
+  margin-left: 50%
+  position: absolute;
+  top: 0%;
+  right: 0%; */
+  padding: 0px 0px 0px 0px;
+
+}
+.reverseImg{
+  /* width: 100%;
+  height:100%;
+  margin-left: 850%;
+  margin-top: 200%;
+  z-index: 1;
+  position: relative;
+  object-fit: cover; */
+  width: 100%;
+  height: auto;
+  padding: 0px 0px 0px 0px;
+}
+.divPlayerListArea{
+  background-color:#f4f4f4;
+  border-radius:5px;
+  height: 100%;
+  overflow-y:scroll;
+}
+.divPlayersListBox{
+  background:#f4f4f4;
+  border-radius:5px;
+  /* width:99%;
+  height:35%;
+  margin:1% 0 1% 0; */
+  border:1px solid;
+  border-color:#f4f4f4;
+  overflow-y:scroll;
+  font-size: 1.3em;
+  text-align: left;
+  padding-left: 5%;
+}
+.listPlayers{
+  padding-left: 10px;
+}
+.listLastPlayer{
+  color: #FE0271;
+}
+.divChatBox{
+  background:#f4f4f4;
+  border-radius:5px;
+  /* width:99%; */
+  height:30%;
+  margin:1% 0 1% 0;
+  border:1px solid;
+  border-color:#f4f4f4;
+  overflow-y:scroll;
+  font-size: 1.3em;
+}
+.divChatForm{
+  height: 20%;
+  border-radius:5px;
+  font-size: 1.7em;
+  width: 100%;
+}
+.txtChat{
+  font-size: 0.8em;
+  overflow-y:auto;
+  border-radius:5px;
+  width: 100%;
+  height:70%;
+  text-align: left;
+  padding-left: 1%;
+  word-wrap: break-word;
+}
+#btnChatSend{
+  font-size: 0.7em;
+  height: 30%;
+  margin-top: 1%;
+}
+.chatCell {
+    background:white;
+    width:100%;
+    text-align: left;
+    padding-left: 2%;
+    margin:auto auto 1px auto;
+    word-wrap: break-word;
+}
+
+.divPlayerArea{
+  /* width:70%;
+  height:90%; */
+  height: 100%;
+  border-radius:6px;
+  /* float:right; */
   text-align:center;
   padding: 0 2% 0 2%;
 }
@@ -67,10 +185,14 @@ body{
     width: auto;
     display:inline-block;
 }
+.drawInformation{
+  color:white;
+  height: 2%;
+}
 .divPlayedCardArea{
   background: #8499db;
   width: 100%;
-  height:30%;
+  height:25%;
   margin-top: 2%;
   text-align: center;
   border-radius:6px;
@@ -80,13 +202,13 @@ body{
 .cardHeadings{
   font-size: 1.4em;
   height: 5%;
-  margin-top: 2%;
+  /* margin-top: 2%; */
   text-align: center;
 }
 .divPlayerCardArea{
   background: #8499db;
   width: 100%;
-  height: 40%;
+  height: 38%;
   overflow-y:scroll;
   border-radius:6px;
 }
@@ -118,109 +240,27 @@ body{
 }
 .buttonBar {
    margin-top: 1%;
+   height: 6%;
    width:100%;
    text-align: center;
    position: relative;
-
+}
+.btnCheckUno{
+    background:#2ecc71;
+    /* padding: 1% 1% 1% 1%; */
+    font-size: 1.2em;
+    color:white;
+    border-radius:6px;
+    margin-left: 2%;
+    width: 7em;
+    height: 100%;
+    align-items: center;
 }
 #btnCheck{
   margin-left: 20%;
 }
-.divChatContainer{
-  background: #8499db;
-  width:30%;
-  height:90%;
-  border-radius:6px;
-  float:left;
-  text-align:center;
-  padding: 0.5% 1% 1% 1%;
-}
-.chatHeadings{
-  font-size: 1.4em;
-  height: 5%;
-  border-radius:5px;
-}
-.divPlayersListBox{
-  background:#f4f4f4;
-  border-radius:5px;
-  width:99%;
-  height:35%;
-  margin:1% 0 1% 0;
-  border:1px solid;
-  border-color:#f4f4f4;
-  overflow-y:scroll;
-  font-size: 1.3em;
-  text-align: left;
-  padding-left: 5%;
-}
-.listPlayers{
-  padding-left: 10px;
-}
-.listLastPlayer{
-  color: #FE0271;
-}
-.divChatBox{
-  background:#f4f4f4;
-  border-radius:5px;
-  width:99%;
-  height:35%;
-  margin:1% 0 1% 0;
-  border:1px solid;
-  border-color:#f4f4f4;
-  overflow-y:scroll;
-  font-size: 1.3em;
-}
-.divChatForm{
-  height: 19%;
-  border-radius:5px;
-  font-size: 1.7em;
-  width: 100%;
-}
-.txtChat{
-  font-size: 0.8em;
-  overflow-y:auto;
-  border-radius:5px;
-  width: 100%;
-  height:70%;
-  text-align: left;
-  padding-left: 1%;
-  word-wrap: break-word;
-}
-#btnChatSend{
-  font-size: 0.7em;
-  height: 30%;
-  margin-top: 1%;
-}
-.chatCell {
-    background:white;
-    width:100%;
-    text-align: left;
-    padding-left: 2%;
-    margin:auto auto 1px auto;
-    word-wrap: break-word;
-}
 
-.reverseDiv
-{
-  width:10%;
-  height:10%;
-  margin-left: 50%
-  position: absolute;
-  top: 0%;
-  right: 0%;
-}
-
-.reverseImg{
-  width: 100%;
-  height:100%;
-  margin-left: 850%;
-  margin-top: 200%;
-  z-index: 1;
-  position: relative;
-  object-fit: cover;
-}
-
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 767px) {
   .divMain{
     height: 80vh;
   }
@@ -228,6 +268,12 @@ body{
     font-size: 12px;
   }
   .btn{
+    font-size: 13px;
+  }
+  .btnCheckUno{
+    font-size: 13px;
+  }
+  .btnAddMe{
     font-size: 13px;
   }
   .chatHeadings{
